[gd_scene load_steps=3 format=2]

[ext_resource path="res://actors/Interactables/EnergyGate/EnergyGate.gd" type="Script" id=1]
[ext_resource path="res://actors/Interactables/EnergyGate/EnergyGateCell.tscn" type="PackedScene" id=2]

[node name="EnergyGate" type="Node2D"]
script = ExtResource( 1 )
gate_height = 3
active = true
direction = "Vertical"

[node name="EnergyGateCell" parent="." instance=ExtResource( 2 )]

[node name="Sparks1" type="CPUParticles2D" parent="."]
position = Vector2( 0, -8 )
emitting = false
amount = 16
lifetime = 0.2
local_coords = false
spread = 180.0
gravity = Vector2( 0, 200 )
initial_velocity = 50.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )

[node name="Sparks2" type="CPUParticles2D" parent="."]
position = Vector2( 0, 40 )
emitting = false
amount = 16
lifetime = 0.2
local_coords = false
spread = 180.0
gravity = Vector2( 0, 200 )
initial_velocity = 50.0
color = Color( 0.956863, 0.956863, 0.894118, 1 )
